# yate

./: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  yate.cabal
app/: yate.hs
src/: Win32.hs  yate.hs
src/Yate/: Files.hs  Projects.hs  Template.hs  Types.hs  Win32.hs
