Name:                 yate
Version:              0.1
Build-type:           Simple
Synopsis:             Yet Another Template Engine: Creates file trees from templates
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2

Library
  build-depends:      base, 
                      filepath >= 1.3,              
                      unordered-containers >= 0.2.3.0,
                      directory >= 1.2.0.1,
                      regex-base >= 0.93.2,           
                      regex-pcre-builtin >= 0.94.4,
                      process >= 1.1.0.2,
                      hastache >= 0.5.1,
                      aeson >= 0.7.0.2
  exposed-modules:    Yate.Files,
                      Yate.Types,
                      Yate.Template,
                      Yate.Projects
  hs-source-dirs:     src

Executable yate
  if !os(windows)
    build-depends:    unix >=  2.6.0.1
  else
    build-depends:    Win32
  hs-source-dirs:     src
  main-is:            yate.hs
  if os(windows)
    cpp-options:      -DWINDOWS
    extra-libraries:  advapi32
    extra-lib-dirs:   c:/Windows/System32
    cc-options:      --enable-stdcall-fixup
  ghc-options:        -Wall
